fix: was cutting off icons that render outside the box

--- a/src/components/FlyModal/FlyModal.sass
+++ b/src/components/FlyModal/FlyModal.sass
@@ -19,7 +19,6 @@
 	height: auto
 	max-height: 90vh
 	@include theme-background-white-else-graydark50
-	overflow: hidden
 	border-radius: 4px
 	text-align: center
 	position: relative
